--- a/express-server/package.json
+++ b/express-server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.11"
   }
 }
