--- a/angular-firebase/angular.json
+++ b/angular-firebase/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "spread-sheets-angular-cli": {
+    "angular-firebase": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/spread-sheets-angular-cli",
+            "outputPath": "dist/angular-firebase",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,10 +23,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2016darkGray.css"
+              "src/styles.css"
             ],
-            "scripts": ["./node_modules/file-saver/FileSaver.js"]
+            "scripts": [],
+            "es5BrowserSupport": true
           },
           "configurations": {
             "production": {
@@ -44,25 +44,32 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "spread-sheets-angular-cli:build"
+            "browserTarget": "angular-firebase:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "spread-sheets-angular-cli:build:production"
+              "browserTarget": "angular-firebase:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "spread-sheets-angular-cli:build"
+            "browserTarget": "angular-firebase:build"
           }
         },
         "test": {
@@ -73,7 +80,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "styles.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
@@ -96,15 +103,21 @@
         }
       }
     },
-    "spread-sheets-angular-cli-e2e": {
+    "angular-firebase-e2e": {
       "root": "e2e/",
       "projectType": "application",
+      "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "spread-sheets-angular-cli:serve"
+            "devServerTarget": "angular-firebase:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "angular-firebase:serve:production"
+            }
           }
         },
         "lint": {
@@ -119,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "spread-sheets-angular-cli"
+  "defaultProject": "angular-firebase"
 }
